# volume_renderer

./: .clang-format  .gitmodules  CMakeLists.txt
data/: config.ini
src/: config.c  config.h  interface.c  interface.h  logger.c  logger.h  main.c
src/interface/: interface.c  interface.h
src/misc/: config.c  config.h  logger.h
